--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,7 +26,7 @@ jobs:
       uses: docker/login-action@v1
       with:   
         username: ${{ secrets.DOCKE_HUB_USERNAME  }}
-        passowrd: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN  }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN  }}
         
     - name: Build and push
       uses: docker/build-push-action@v2
