--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Loging to Dockerhub 
       uses: docker/login-action@v1
       with:   
-        username: ${{ secrets.DOCKE_HUB_USERNAME  }}
+        username: ${{ secrets.DOCKER_HUB_USERNAME  }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN  }}
         
     - name: Build and push
