--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,7 +33,10 @@ jobs:
       with:
         context: .
         push: false
-        tags: gnosischain/lighthouse:tagname
+        tags: gnosischain/lighthouse:latest
+        build-args: |
+            UPSTREAM_VERSION=latest
+            BEACON_API_PORT=3500
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache-new
     - name: Move cache
