--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,7 +33,7 @@ jobs:
       with:
         context: .
         push: false
-        tags: gnosischain/lighthouse:latest
+        tags: gnosischain/lighthouse:testing
         build-args: |
             UPSTREAM_VERSION=latest
             BEACON_API_PORT=3500
