--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,7 +44,7 @@ jobs:
           --tag gnosischain/${{ env.CLIENT }}-validator:${{ env.UPSTREAM_VERSION }}-${{ env.NETWORK }}
           --build-arg UPSTREAM_VERSION=${{ env.UPSTREAM_VERSION }}
           -f validator.Dockerfile
-    - run: docker push gnosischain/${{ env.CLIENT }}-beacon:${{ env.UPSTREAM_VERSION }}-${{ env.NETWORK }} gnosischain/${{ env.CLIENT }}-validator:${{ env.UPSTREAM_VERSION }}-${{ NETWORK }}
+    - run: docker push gnosischain/${{ env.CLIENT }}-beacon:${{ env.UPSTREAM_VERSION }}-${{ env.NETWORK }} gnosischain/${{ env.CLIENT }}-validator:${{ env.UPSTREAM_VERSION }}-${{ env.NETWORK }}
 
     - name: Move cache
       run: |
