--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,54 +2,52 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
-  
+    branches: ["main"]
+
 env:
   UPSTREAM_VERSION: v2.5.1
   NETWORK: chiado
-  CLIENT: lighthouse
 
 jobs:
   push_to_registry:
-    name: Build and Push Docker image 
+    name: Build and Push Docker image
     runs-on: ubuntu-latest
-    steps:        
-    - name: Checkout the repo 
-      uses: actions/checkout@v2
-    - name: Set up Docker Buildx 
-      uses: docker/setup-buildx-action@v1
-  
-    - name: Cache Docker layers 
-      uses: actions/cache@v2 
-      with: 
-        path: /tmp/.buildx-cache 
-        key: ${{ runner.os }}-buildx-${{ github.sha }} 
-        restore-keys: |
-          ${{ runner.os }}-buildx-
-  
-    - name: Loging to Dockerhub 
-      uses: docker/login-action@v1
-      with:   
-        username: ${{ secrets.DOCKER_HUB_USERNAME  }}
-        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN  }}
-        
-      # {upstream_image}{testnet}{version_upstream}
-    - run: >
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Loging to Dockerhub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME  }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN  }}
+
+        # {upstream_image}{testnet}{version_upstream}
+      - run: >
           docker build .
-          --tag gnosischain/${{ env.CLIENT }}-beacon:${{ env.UPSTREAM_VERSION }}-${{ env.NETWORK }}
           --build-arg UPSTREAM_VERSION=${{ env.UPSTREAM_VERSION }}
+          --tag gnosischain/lighthouse-beacon:${{ env.UPSTREAM_VERSION }}-${{ env.NETWORK }}
+          --tag gnosischain/lighthouse-beacon:latest-${{ env.NETWORK }}
           -f beacon.Dockerfile
-    - run: >
+      - run: >
           docker build .
-          --tag gnosischain/${{ env.CLIENT }}-validator:${{ env.UPSTREAM_VERSION }}-${{ env.NETWORK }}
           --build-arg UPSTREAM_VERSION=${{ env.UPSTREAM_VERSION }}
+          --tag gnosischain/lighthouse-validator:${{ env.UPSTREAM_VERSION }}-${{ env.NETWORK }}
+          --tag gnosischain/lighthouse-validator:latest-${{ env.NETWORK }}
           -f validator.Dockerfile
 
-    - run: docker push gnosischain/${{ env.CLIENT }}-beacon:${{ env.UPSTREAM_VERSION }}-${{ env.NETWORK }} 
-    - run: docker push gnosischain/${{ env.CLIENT }}-validator:${{ env.UPSTREAM_VERSION }}-${{ env.NETWORK }}
-
-
-
-
-
-
+      - run: >
+          docker push gnosischain/lighthouse-beacon:${{ env.UPSTREAM_VERSION }}-${{ env.NETWORK }}
+          docker push gnosischain/lighthouse-beacon:latest-${{ env.NETWORK }}
+          docker push gnosischain/lighthouse-validator:${{ env.UPSTREAM_VERSION }}-${{ env.NETWORK }}
+          docker push gnosischain/lighthouse-validator:latest-${{ env.NETWORK }}
