updating the readme.md and changing the pipeline

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,7 +46,7 @@ jobs:
           --tag gnosischain/lighthouse-validator:latest-${{ env.NETWORK }}
           -f validator.Dockerfile
 
-      - run: >
+      - run: |
           docker push gnosischain/lighthouse-beacon:${{ env.UPSTREAM_VERSION }}-${{ env.NETWORK }} 
           docker push gnosischain/lighthouse-beacon:latest-${{ env.NETWORK }}
           docker push gnosischain/lighthouse-validator:${{ env.UPSTREAM_VERSION }}-${{ env.NETWORK }}
